# honeycomb

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  troubleshoot.md
.claude/agents/: container-doctor.md  gitops-reviewer.md  hive-coordinator.md  provisioner.md
.claude/skills/compbio-workflow/: SKILL.md
.github/workflows/: ci.yml
bootstrapper/: provision.py
bootstrapper/claude-hive-feature/: devcontainer-feature.json  install.sh
bootstrapper/hooks/: compbio_hooks.json  default_hooks.json  ml-cuda_hooks.json  web-dev_hooks.json
bootstrapper/skill_registries/: base.json  compbio.json  ml-cuda.json  web-dev.json
bootstrapper/tests/: test_hooks_diff.py  test_hooks_install.py  test_provision.py  test_provision_security.py  test_template_goldens.py
dashboard/: .gitignore  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
dashboard/public/: manifest.webmanifest
dashboard/src/: App.tsx  index.css  main.tsx  test-setup.ts
docs/: ARCHITECTURE.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.36.0.md
gitops/: commit_manager.py  pr_manager.py  repo_scanner.py  runner.py
gitops/tests/: test_commit_manager.py  test_pr_manager.py  test_repo_scanner.py
hive-agent/: README.md  pyproject.toml
hive-agent/hive_agent/: __init__.py  cli.py  client.py  command_listener.py  command_runner.py  protocol.py  socket_listener.py  ws_client.py
hive-agent/tests/: test_cli.py  test_client.py  test_command_listener.py  test_command_runner.py  test_socket_listener.py  test_submit_diff_cli.py  test_submit_diff_forwarder.py  test_ws_client.py
hub/: auth.py  config.py  logging_setup.py  main.py  pty_commands.py  pyproject.toml
hub/db/: __init__.py  alembic.ini  migrations_runner.py  schema.py
hub/db/migrations/: env.py  script.py.mako
hub/db/migrations/versions/: 2026_04_17_0211-baseline_registry_schema.py  2026_04_17_1200-add_agent_expected.py  2026_04_20_1200-m26_sessions_table.py  2026_04_21_1200-m28_session_position.py  2026_04_23_1200-m27_diff_events.py  2026_04_26_0818-m33_add_claude_session_id_to_named_.py  2026_04_26_1848-m35_artifacts_table.py
hub/models/: agent_protocol.py  chat_events.py  schemas.py
hub/routers/: agent.py  artifacts.py  chat_stream.py  commands.py  containers.py  diff_events.py  discover.py  fs.py  gitops.py  keybindings.py  named_sessions.py  problems.py  pty.py  sessions.py  settings.py  ws.py
hub/services/: agent_registry.py  artifacts.py  autodiscovery.py  chat_stream.py  chat_stream_artifact_hooks.py  claude_relay.py  devcontainer_manager.py  diff_events.py  discovery.py  fs_browser.py  health_checker.py  keybindings.py  metrics.py  named_sessions.py  problem_log.py  pty_session.py  registry.py  resource_monitor.py  settings_overrides.py  tool_probe.py
hub/tests/: conftest.py  test_agent_diff_event_intake.py  test_agent_endpoint.py  test_agent_protocol.py  test_agent_registry.py  test_api.py  test_artifacts_endpoint.py  test_artifacts_service.py  test_artifacts_spec_rescan.py  test_auth.py  test_chat_events_models.py  test_chat_stream_artifact_hooks.py  test_chat_stream_endpoint.py  test_chat_stream_parser.py  test_chat_stream_subprocess.py  test_claude_relay.py  test_config.py  test_diff_events_endpoint.py  test_diff_events_service.py  test_discovery.py  test_discovery_container_candidates.py  test_discovery_workspace_inference.py  test_fs_browser.py  test_fs_read_endpoint.py  test_fs_walk_endpoint.py  test_fs_walker.py  test_fs_write_endpoint.py  test_fs_writer.py  test_health_checker.py  test_integration.py  test_keybindings.py  test_logging.py  test_m26_sessions_migration.py  test_m27_diff_events_migration.py  test_m28_session_position_migration.py  test_metrics.py  test_named_sessions_endpoint.py  test_named_sessions_service.py  test_problem_log.py  test_pty_commands.py  (+13 more)
hub/tests/fixtures/chat_stream/: simple_text.jsonl
(+248 files in other folders)
