[project]
name = "hive-agent"
version = "0.1.0"
description = "Lightweight worker-side client for Claude Hive — runs inside devcontainers to communicate with the hub"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "uvicorn>=0.34,<1",
    "starlette>=0.45,<1",
    "click>=8.1,<9",
]

[project.scripts]
hive-agent = "hive_agent.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-httpx>=0.35,<1",
    "respx>=0.22,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
