[project]
name = "hive-agent"
version = "0.4.0"
description = "Lightweight worker-side WebSocket client for Claude Hive — runs inside devcontainers and dials the hub"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websockets>=13,<16",
    "pydantic>=2,<3",
    "click>=8.1,<9",
]

[project.scripts]
hive-agent = "hive_agent.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
