[project]
name = "claude-hive-hub"
version = "0.1.0"
description = "Claude Hive Hub — centralized orchestrator for devcontainer-based Claude Code environments"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.34,<1",
    "docker>=7,<8",
    "aiosqlite>=0.20,<1",
    "httpx>=0.27,<1",
    "pydantic>=2,<3",
    "pydantic-settings>=2.6,<3",
    "jinja2>=3.1,<4",
    "structlog>=24.4,<26",
    "prometheus-client>=0.21,<1",
]

[project.scripts]
hive = "hub.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# When installed via `pip install -e ./hub`, setuptools roots at hub/.
# The actual importable packages (routers/, services/, models/) are subpackages
# of "hub", but since we're already inside hub/, we need to tell setuptools
# to look one level up and include the hub package.
where = [".."]
include = ["hub", "hub.*"]
